--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <hr>
     <br>
     <div class="navbar">
-        <a class="kl" style="color:darkblue; " href="/contest.html">HOME</a>
-        <a class="kl" href="/contest1A.html">A</a>
+        <a class="kl" style="color:darkblue; " href="contest.html">HOME</a>
+        <a class="kl" href="contest1A.html">A</a>
         <a class="kl" href="contest1B.html">B</a>
         <a class="kl" href="contest1C.html">C</a>
         <a class="kl" href="contest1D.html">D</a><a class="kl" href="contest1E.html">E</a>
