--- a/contest1C.html
+++ b/contest1C.html
@@ -25,7 +25,7 @@
     <br>
     <div class="navbar">
         <a class="kl" href="index.html">HOME</a>
-        <a class="kl" href="/contest1A.html">A</a>
+        <a class="kl" href="contest1A.html">A</a>
         <a class="kl" href="contest1B.html">B</a>
         <a class="kl" style="color:lightblue; background:rgb(235 246 9 / 20%);" href="">C</a>
         <a class="kl" href="contest1D.html">D</a><a class="kl" href="contest1E.html">E</a>
